#5 -- normalizing the status (Modifying models)

--- a/App/appsettings.json
+++ b/App/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost\\SQLEXPRESS;database=LibraryAppDB;encrypt=False;Integrated Security=True;"
+    "DefaultConnection": "server=localhost\\SQLEXPRESS;database=EnozomDB;encrypt=False;Integrated Security=True;"
   }
 }
